[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "advent_of_code_2023_lib"
path = "src/lib.rs"
[[bin]]
name = "advent_of_code_2023_main"
path = "bin/main.rs"
